changed form placeholder

--- a/templates/register.html
+++ b/templates/register.html
@@ -17,7 +17,7 @@
         </div>
         <br>
         <div class="form-group">
-            <input class="form-control" name="referral" placeholder="Referral Code" type="text">
+            <input class="form-control" name="referral" placeholder="Referral code" type="text">
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
